--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Tue Jul 17 13:05:04 2018</p>
+         Last Run: Tue Jul 17 14:05:03 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - Andrew Sibbald School</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Tuesday Jul 17, 2018 -  7:30PM til  9:00PM</H4>
                <table class="table table-striped">
@@ -31,36 +31,36 @@
                      <tr>
                         <td>07:00 PM</td>
                         <td>Mostly Cloudy</td>
-                        <td>29</td>
-                        <td>29</td>
-                        <td>2</td>
-                        <td>29</td>
+                        <td>30</td>
+                        <td>30</td>
+                        <td>0</td>
+                        <td>27</td>
                         <td>1</td>
                         <td>11</td>
                         <td>ESE</td>
-                        <td>69</td>
+                        <td>60</td>
                      </tr>
                      <tr>
                         <td>08:00 PM</td>
                         <td>Mostly Cloudy</td>
                         <td>29</td>
                         <td>29</td>
-                        <td>1</td>
+                        <td>0</td>
                         <td>31</td>
                         <td>0</td>
                         <td>10</td>
                         <td>ESE</td>
-                        <td>62</td>
+                        <td>63</td>
                      </tr>
                      <tr>
                         <td>09:00 PM</td>
                         <td>Partly Cloudy</td>
                         <td>26</td>
                         <td>26</td>
+                        <td>2</td>
+                        <td>38</td>
                         <td>0</td>
-                        <td>39</td>
-                        <td>0</td>
-                        <td>10</td>
+                        <td>8</td>
                         <td>ESE</td>
                         <td>59</td>
                      </tr>
@@ -106,7 +106,7 @@
                "pointColor":"rgba(92,0,141,1)",
                "fillColor":"rgba(92,0,141,0)",
                "data":[
-                 "29",
+                 "30",
                  "29",
                  "26"
                ]
@@ -117,7 +117,7 @@
                "pointColor":"rgba(252,49,18,1)",
                "fillColor":"rgba(252,49,18,0)",
                "data":[
-                 "29",
+                 "30",
                  "29",
                  "26"
                ]
@@ -170,9 +170,9 @@
                "strokeColor":"rgba(0,0,255,1)",
                "fillColor":"rgba(0,0,255,0.5)",
                "data":[
-                 "2",
-                 "1",
-                 "0"
+                 "0",
+                 "0",
+                 "2"
                ]
              },
              {
@@ -180,9 +180,9 @@
                "strokeColor":"rgba(40,177,255,1)",
                "fillColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "29",
+                 "27",
                  "31",
-                 "39"
+                 "38"
                ]
              },
              {
@@ -190,8 +190,8 @@
                "strokeColor":"rgba(233,37,255,1)",
                "fillColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "69",
-                 "62",
+                 "60",
+                 "63",
                  "59"
                ]
              }
@@ -204,12 +204,13 @@
                   var MyNewChart = new Chart(ctx).BarAlt(data,options);
                   document.getElementById("legend_chartHTMLReportGenerator2").innerHTML=MyNewChart.generateLegend();
                </script>
+         <img src="http://www.wmiradar.com/alberta/latest_loop.gif">
          <hr style="border-width:5px ">
       </div>
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Tue Jul 17 13:05:04 2018</p>
+         Last Run: Tue Jul 17 14:05:03 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Practice - Central Memorial High School</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Thursday Jul 19, 2018 -  6:00PM til  7:30PM</H4>
                <table class="table table-striped">
@@ -255,10 +256,10 @@
                      <tr>
                         <td>07:00 PM</td>
                         <td>Chance of a Thunderstorm</td>
-                        <td>20</td>
-                        <td>20</td>
+                        <td>21</td>
+                        <td>21</td>
                         <td>55</td>
-                        <td>59</td>
+                        <td>58</td>
                         <td>1</td>
                         <td>13</td>
                         <td>ESE</td>
@@ -270,7 +271,7 @@
                         <td>20</td>
                         <td>20</td>
                         <td>55</td>
-                        <td>62</td>
+                        <td>60</td>
                         <td>0</td>
                         <td>11</td>
                         <td>E</td>
@@ -321,7 +322,7 @@
                "data":[
                  "21",
                  "21",
-                 "20",
+                 "21",
                  "20"
                ]
              },
@@ -333,7 +334,7 @@
                "data":[
                  "21",
                  "21",
-                 "20",
+                 "21",
                  "20"
                ]
              }
@@ -399,8 +400,8 @@
                "data":[
                  "56",
                  "57",
-                 "59",
-                 "62"
+                 "58",
+                 "60"
                ]
              },
              {
@@ -428,7 +429,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Tue Jul 17 13:05:04 2018</p>
+         Last Run: Tue Jul 17 14:05:03 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Game vs. MUSC Magic - Rundle College</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Saturday Jul 21, 2018 - 11:30AM til  2:00PM</H4>
                <table class="table table-striped">
@@ -462,13 +463,13 @@
                      <tr>
                         <td>11:00 AM</td>
                         <td>Clear</td>
-                        <td>18</td>
-                        <td>18</td>
+                        <td>19</td>
+                        <td>19</td>
                         <td>4</td>
-                        <td>47</td>
+                        <td>46</td>
                         <td>4</td>
                         <td>8</td>
-                        <td>NW</td>
+                        <td>NNW</td>
                         <td>6</td>
                      </tr>
                      <tr>
@@ -479,7 +480,7 @@
                         <td>4</td>
                         <td>40</td>
                         <td>6</td>
-                        <td>8</td>
+                        <td>6</td>
                         <td>NW</td>
                         <td>9</td>
                      </tr>
@@ -498,10 +499,10 @@
                      <tr>
                         <td>02:00 PM</td>
                         <td>Partly Cloudy</td>
-                        <td>20</td>
-                        <td>20</td>
+                        <td>21</td>
+                        <td>21</td>
                         <td>15</td>
-                        <td>36</td>
+                        <td>35</td>
                         <td>7</td>
                         <td>10</td>
                         <td>WNW</td>
@@ -552,10 +553,10 @@
                "fillColor":"rgba(92,0,141,0)",
                "data":[
                  "17",
-                 "18",
+                 "19",
                  "19",
                  "20",
-                 "20"
+                 "21"
                ]
              },
              {
@@ -565,10 +566,10 @@
                "fillColor":"rgba(252,49,18,0)",
                "data":[
                  "17",
-                 "18",
+                 "19",
                  "19",
                  "20",
-                 "20"
+                 "21"
                ]
              }
            ]
@@ -634,10 +635,10 @@
                "fillColor":"rgba(40,177,255,0.5)",
                "data":[
                  "53",
-                 "47",
+                 "46",
                  "40",
                  "36",
-                 "36"
+                 "35"
                ]
              },
              {
