--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Tue Jul 17 14:05:03 2018</p>
+         Last Run: Tue Jul 17 15:05:03 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - Andrew Sibbald School</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Tuesday Jul 17, 2018 -  7:30PM til  9:00PM</H4>
                <table class="table table-striped">
@@ -31,10 +31,10 @@
                      <tr>
                         <td>07:00 PM</td>
                         <td>Mostly Cloudy</td>
-                        <td>30</td>
-                        <td>30</td>
+                        <td>29</td>
+                        <td>29</td>
                         <td>0</td>
-                        <td>27</td>
+                        <td>28</td>
                         <td>1</td>
                         <td>11</td>
                         <td>ESE</td>
@@ -46,11 +46,11 @@
                         <td>29</td>
                         <td>29</td>
                         <td>0</td>
-                        <td>31</td>
+                        <td>32</td>
                         <td>0</td>
                         <td>10</td>
                         <td>ESE</td>
-                        <td>63</td>
+                        <td>64</td>
                      </tr>
                      <tr>
                         <td>09:00 PM</td>
@@ -58,10 +58,10 @@
                         <td>26</td>
                         <td>26</td>
                         <td>2</td>
-                        <td>38</td>
+                        <td>39</td>
                         <td>0</td>
                         <td>8</td>
-                        <td>ESE</td>
+                        <td>SSE</td>
                         <td>59</td>
                      </tr>
                   </tbody>
@@ -106,7 +106,7 @@
                "pointColor":"rgba(92,0,141,1)",
                "fillColor":"rgba(92,0,141,0)",
                "data":[
-                 "30",
+                 "29",
                  "29",
                  "26"
                ]
@@ -117,7 +117,7 @@
                "pointColor":"rgba(252,49,18,1)",
                "fillColor":"rgba(252,49,18,0)",
                "data":[
-                 "30",
+                 "29",
                  "29",
                  "26"
                ]
@@ -180,9 +180,9 @@
                "strokeColor":"rgba(40,177,255,1)",
                "fillColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "27",
-                 "31",
-                 "38"
+                 "28",
+                 "32",
+                 "39"
                ]
              },
              {
@@ -191,7 +191,7 @@
                "fillColor":"rgba(233,37,255,0.5)",
                "data":[
                  "60",
-                 "63",
+                 "64",
                  "59"
                ]
              }
@@ -210,7 +210,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Tue Jul 17 14:05:03 2018</p>
+         Last Run: Tue Jul 17 15:05:03 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Practice - Central Memorial High School</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Thursday Jul 19, 2018 -  6:00PM til  7:30PM</H4>
                <table class="table table-striped">
@@ -234,8 +234,8 @@
                         <td>Thunderstorm</td>
                         <td>21</td>
                         <td>21</td>
-                        <td>81</td>
-                        <td>56</td>
+                        <td>83</td>
+                        <td>54</td>
                         <td>3</td>
                         <td>11</td>
                         <td>SE</td>
@@ -247,11 +247,11 @@
                         <td>21</td>
                         <td>21</td>
                         <td>55</td>
-                        <td>57</td>
+                        <td>55</td>
                         <td>2</td>
-                        <td>11</td>
+                        <td>13</td>
                         <td>ESE</td>
-                        <td>63</td>
+                        <td>65</td>
                      </tr>
                      <tr>
                         <td>07:00 PM</td>
@@ -259,11 +259,11 @@
                         <td>21</td>
                         <td>21</td>
                         <td>55</td>
-                        <td>58</td>
+                        <td>57</td>
                         <td>1</td>
                         <td>13</td>
                         <td>ESE</td>
-                        <td>72</td>
+                        <td>74</td>
                      </tr>
                      <tr>
                         <td>08:00 PM</td>
@@ -271,9 +271,9 @@
                         <td>20</td>
                         <td>20</td>
                         <td>55</td>
-                        <td>60</td>
+                        <td>59</td>
                         <td>0</td>
-                        <td>11</td>
+                        <td>13</td>
                         <td>E</td>
                         <td>70</td>
                      </tr>
@@ -387,7 +387,7 @@
                "strokeColor":"rgba(0,0,255,1)",
                "fillColor":"rgba(0,0,255,0.5)",
                "data":[
-                 "81",
+                 "83",
                  "55",
                  "55",
                  "55"
@@ -398,10 +398,10 @@
                "strokeColor":"rgba(40,177,255,1)",
                "fillColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "56",
+                 "54",
+                 "55",
                  "57",
-                 "58",
-                 "60"
+                 "59"
                ]
              },
              {
@@ -410,8 +410,8 @@
                "fillColor":"rgba(233,37,255,0.5)",
                "data":[
                  "75",
-                 "63",
-                 "72",
+                 "65",
+                 "74",
                  "70"
                ]
              }
@@ -429,7 +429,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Tue Jul 17 14:05:03 2018</p>
+         Last Run: Tue Jul 17 15:05:03 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Game vs. MUSC Magic - Rundle College</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Saturday Jul 21, 2018 - 11:30AM til  2:00PM</H4>
                <table class="table table-striped">
@@ -454,59 +454,59 @@
                         <td>17</td>
                         <td>17</td>
                         <td>3</td>
-                        <td>53</td>
+                        <td>48</td>
                         <td>3</td>
-                        <td>10</td>
-                        <td>NW</td>
-                        <td>4</td>
+                        <td>11</td>
+                        <td>WNW</td>
+                        <td>13</td>
                      </tr>
                      <tr>
                         <td>11:00 AM</td>
                         <td>Clear</td>
-                        <td>19</td>
-                        <td>19</td>
+                        <td>18</td>
+                        <td>18</td>
                         <td>4</td>
-                        <td>46</td>
+                        <td>41</td>
                         <td>4</td>
-                        <td>8</td>
-                        <td>NNW</td>
-                        <td>6</td>
+                        <td>11</td>
+                        <td>NW</td>
+                        <td>15</td>
                      </tr>
                      <tr>
                         <td>12:00 PM</td>
                         <td>Clear</td>
                         <td>19</td>
                         <td>19</td>
-                        <td>4</td>
-                        <td>40</td>
+                        <td>19</td>
+                        <td>36</td>
                         <td>6</td>
-                        <td>6</td>
+                        <td>11</td>
                         <td>NW</td>
-                        <td>9</td>
+                        <td>19</td>
                      </tr>
                      <tr>
                         <td>01:00 PM</td>
                         <td>Partly Cloudy</td>
-                        <td>20</td>
-                        <td>20</td>
-                        <td>15</td>
+                        <td>19</td>
+                        <td>19</td>
+                        <td>18</td>
                         <td>36</td>
                         <td>7</td>
-                        <td>8</td>
+                        <td>13</td>
                         <td>NW</td>
-                        <td>41</td>
+                        <td>48</td>
                      </tr>
                      <tr>
                         <td>02:00 PM</td>
                         <td>Partly Cloudy</td>
-                        <td>21</td>
-                        <td>21</td>
-                        <td>15</td>
-                        <td>35</td>
-                        <td>7</td>
-                        <td>10</td>
+                        <td>19</td>
+                        <td>19</td>
+                        <td>18</td>
+                        <td>38</td>
+                        <td>6</td>
+                        <td>13</td>
                         <td>WNW</td>
-                        <td>43</td>
+                        <td>52</td>
                      </tr>
                   </tbody>
                </table>
@@ -553,10 +553,10 @@
                "fillColor":"rgba(92,0,141,0)",
                "data":[
                  "17",
+                 "18",
                  "19",
                  "19",
-                 "20",
-                 "21"
+                 "19"
                ]
              },
              {
@@ -566,10 +566,10 @@
                "fillColor":"rgba(252,49,18,0)",
                "data":[
                  "17",
+                 "18",
                  "19",
                  "19",
-                 "20",
-                 "21"
+                 "19"
                ]
              }
            ]
@@ -624,9 +624,9 @@
                "data":[
                  "3",
                  "4",
-                 "4",
-                 "15",
-                 "15"
+                 "19",
+                 "18",
+                 "18"
                ]
              },
              {
@@ -634,11 +634,11 @@
                "strokeColor":"rgba(40,177,255,1)",
                "fillColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "53",
-                 "46",
-                 "40",
+                 "48",
+                 "41",
                  "36",
-                 "35"
+                 "36",
+                 "38"
                ]
              },
              {
@@ -646,11 +646,11 @@
                "strokeColor":"rgba(233,37,255,1)",
                "fillColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "4",
-                 "6",
-                 "9",
-                 "41",
-                 "43"
+                 "13",
+                 "15",
+                 "19",
+                 "48",
+                 "52"
                ]
              }
            ]
