--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Tue Jul 17 17:05:03 2018</p>
+         Last Run: Tue Jul 17 18:05:03 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - Andrew Sibbald School</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Tuesday Jul 17, 2018 -  7:30PM til  9:00PM</H4>
                <table class="table table-striped">
@@ -34,35 +34,35 @@
                         <td>30</td>
                         <td>30</td>
                         <td>0</td>
-                        <td>26</td>
+                        <td>27</td>
                         <td>1</td>
-                        <td>10</td>
+                        <td>14</td>
                         <td>ESE</td>
-                        <td>62</td>
+                        <td>65</td>
                      </tr>
                      <tr>
                         <td>08:00 PM</td>
                         <td>Mostly Cloudy</td>
                         <td>29</td>
                         <td>29</td>
-                        <td>1</td>
-                        <td>30</td>
                         <td>0</td>
-                        <td>8</td>
-                        <td>E</td>
-                        <td>61</td>
+                        <td>31</td>
+                        <td>0</td>
+                        <td>13</td>
+                        <td>ESE</td>
+                        <td>63</td>
                      </tr>
                      <tr>
                         <td>09:00 PM</td>
-                        <td>Mostly Cloudy</td>
+                        <td>Partly Cloudy</td>
                         <td>26</td>
                         <td>26</td>
                         <td>1</td>
-                        <td>40</td>
+                        <td>38</td>
                         <td>0</td>
-                        <td>8</td>
+                        <td>11</td>
                         <td>E</td>
-                        <td>61</td>
+                        <td>59</td>
                      </tr>
                   </tbody>
                </table>
@@ -171,7 +171,7 @@
                "fillColor":"rgba(0,0,255,0.5)",
                "data":[
                  "0",
-                 "1",
+                 "0",
                  "1"
                ]
              },
@@ -180,9 +180,9 @@
                "strokeColor":"rgba(40,177,255,1)",
                "fillColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "26",
-                 "30",
-                 "40"
+                 "27",
+                 "31",
+                 "38"
                ]
              },
              {
@@ -190,9 +190,9 @@
                "strokeColor":"rgba(233,37,255,1)",
                "fillColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "62",
-                 "61",
-                 "61"
+                 "65",
+                 "63",
+                 "59"
                ]
              }
            ]
@@ -210,7 +210,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Tue Jul 17 17:05:03 2018</p>
+         Last Run: Tue Jul 17 18:05:03 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Practice - Central Memorial High School</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Thursday Jul 19, 2018 -  6:00PM til  7:30PM</H4>
                <table class="table table-striped">
@@ -234,8 +234,8 @@
                         <td>Thunderstorm</td>
                         <td>22</td>
                         <td>22</td>
-                        <td>65</td>
-                        <td>54</td>
+                        <td>68</td>
+                        <td>53</td>
                         <td>3</td>
                         <td>13</td>
                         <td>ESE</td>
@@ -247,11 +247,11 @@
                         <td>21</td>
                         <td>21</td>
                         <td>55</td>
-                        <td>56</td>
+                        <td>57</td>
                         <td>2</td>
                         <td>11</td>
                         <td>ESE</td>
-                        <td>68</td>
+                        <td>69</td>
                      </tr>
                      <tr>
                         <td>07:00 PM</td>
@@ -263,7 +263,7 @@
                         <td>1</td>
                         <td>13</td>
                         <td>E</td>
-                        <td>82</td>
+                        <td>80</td>
                      </tr>
                      <tr>
                         <td>08:00 PM</td>
@@ -275,7 +275,7 @@
                         <td>0</td>
                         <td>13</td>
                         <td>E</td>
-                        <td>86</td>
+                        <td>87</td>
                      </tr>
                   </tbody>
                </table>
@@ -387,7 +387,7 @@
                "strokeColor":"rgba(0,0,255,1)",
                "fillColor":"rgba(0,0,255,0.5)",
                "data":[
-                 "65",
+                 "68",
                  "55",
                  "55",
                  "55"
@@ -398,8 +398,8 @@
                "strokeColor":"rgba(40,177,255,1)",
                "fillColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "54",
-                 "56",
+                 "53",
+                 "57",
                  "63",
                  "62"
                ]
@@ -410,9 +410,9 @@
                "fillColor":"rgba(233,37,255,0.5)",
                "data":[
                  "75",
-                 "68",
-                 "82",
-                 "86"
+                 "69",
+                 "80",
+                 "87"
                ]
              }
            ]
@@ -429,7 +429,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Tue Jul 17 17:05:03 2018</p>
+         Last Run: Tue Jul 17 18:05:03 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Game vs. MUSC Magic - Rundle College</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Saturday Jul 21, 2018 - 11:30AM til  2:00PM</H4>
                <table class="table table-striped">
@@ -453,7 +453,7 @@
                         <td>Clear</td>
                         <td>17</td>
                         <td>17</td>
-                        <td>3</td>
+                        <td>2</td>
                         <td>48</td>
                         <td>3</td>
                         <td>11</td>
@@ -465,11 +465,11 @@
                         <td>Clear</td>
                         <td>18</td>
                         <td>18</td>
-                        <td>4</td>
+                        <td>3</td>
                         <td>41</td>
                         <td>4</td>
                         <td>11</td>
-                        <td>NW</td>
+                        <td>WNW</td>
                         <td>15</td>
                      </tr>
                      <tr>
@@ -477,11 +477,11 @@
                         <td>Clear</td>
                         <td>19</td>
                         <td>19</td>
-                        <td>19</td>
-                        <td>36</td>
+                        <td>18</td>
+                        <td>37</td>
                         <td>6</td>
                         <td>11</td>
-                        <td>NW</td>
+                        <td>WNW</td>
                         <td>19</td>
                      </tr>
                      <tr>
@@ -493,8 +493,8 @@
                         <td>36</td>
                         <td>7</td>
                         <td>13</td>
-                        <td>NW</td>
-                        <td>48</td>
+                        <td>WNW</td>
+                        <td>46</td>
                      </tr>
                      <tr>
                         <td>02:00 PM</td>
@@ -502,11 +502,11 @@
                         <td>19</td>
                         <td>19</td>
                         <td>18</td>
-                        <td>38</td>
+                        <td>37</td>
                         <td>6</td>
                         <td>13</td>
                         <td>WNW</td>
-                        <td>52</td>
+                        <td>50</td>
                      </tr>
                   </tbody>
                </table>
@@ -622,9 +622,9 @@
                "strokeColor":"rgba(0,0,255,1)",
                "fillColor":"rgba(0,0,255,0.5)",
                "data":[
+                 "2",
                  "3",
-                 "4",
-                 "19",
+                 "18",
                  "18",
                  "18"
                ]
@@ -636,9 +636,9 @@
                "data":[
                  "48",
                  "41",
+                 "37",
                  "36",
-                 "36",
-                 "38"
+                 "37"
                ]
              },
              {
@@ -649,8 +649,8 @@
                  "13",
                  "15",
                  "19",
-                 "48",
-                 "52"
+                 "46",
+                 "50"
                ]
              }
            ]
